--- a/src/FigLex-Presentation.html
+++ b/src/FigLex-Presentation.html
@@ -164,7 +164,10 @@ Showing an Image of a Landmark
 </section><section id="section-3" class="slide level2">
 <h1></h1>
 <h2>
-The relationship between the carat of a diamond &amp; its price, same plots, more <strong>detail</strong>
+The relationship between the carat of a diamond &amp; its price
+</h2>
+<h2>
+…same plots, more <u>detail</u>
 </h2>
 </section><section id="lineplot-1" class="slide level2">
 <h1>Lineplot</h1>
