--- a/src/VizLex-Presentation.html
+++ b/src/VizLex-Presentation.html
@@ -148,7 +148,7 @@ Showing an Image of a Landmark
 <li>Photo/Sketch/3D rendering<br /></li>
 </ul>
 </div>
-<p><br> <em>.. the choice is dependent on the intended message of the visualization</em></p>
+<p><em>.. the choice is dependent on the intended message of the visualization</em></p>
 </section></section>
 <section><section id="detail" class="titleslide slide level1"><h1>Detail</h1></section><section id="detail-1" class="slide level2">
 <h1>Detail</h1>
