Everything in its right place.

--- a/slidedeck/VizLex-Presentation.html
+++ b/slidedeck/VizLex-Presentation.html
@@ -138,12 +138,13 @@ Comparing Sample Distributions
 <li>Density Plot<br /></li>
 <li>Histogram<br /></li>
 <li>Box Plot
-</div>
-<br>
+</div></li>
+</ul>
 <div align="left">
 <h4>
 Showing an Image of a Landmark
-</h4></li>
+</h4>
+<ul>
 <li>Choice of Angle<br /></li>
 <li>Photo/Sketch/3D rendering<br /></li>
 </ul>
@@ -152,7 +153,7 @@ Showing an Image of a Landmark
 </section></section>
 <section><section id="detail" class="titleslide slide level1"><h1>Detail</h1></section><section id="detail-1" class="slide level2">
 <h1>Detail</h1>
-<p>The detail term reflects the amount information that is presented to the viewer. It is a delicate balance aimed at providing enough information to convey the message while limiting extraneous ￼￼￼￼￼information that may detract from it.<br /><br> <strong>i.e.</strong> <em>What is the level of <strong>detail</strong> required to convey your message?</em></p>
+<p>The detail term reflects the amount information that is presented to the viewer. It is a delicate balance aimed at providing enough information to convey the message while limiting extraneous information that may detract from it.<br /><br> <strong>i.e.</strong> <em>What is the level of <strong>detail</strong> required to convey your message?</em></p>
 </section><section id="section-3" class="slide level2">
 <h1></h1>
 <h2>
