--- a/slidedeck/VizLex-Presentation.html
+++ b/slidedeck/VizLex-Presentation.html
@@ -204,7 +204,7 @@ Using the Visualization Lexicon
 </div>
 </section><section id="vizlex-handoutcheatsheet" class="slide level2">
 <h1>VizLex Handout/Cheatsheet</h1>
-<p>The Visualization Lexicon is also available in a convenient one-pager:<br /><a href="https://rawgit.com/dimagor/VizLex/master/src/VizLex-Handout.pdf" class="uri">https://rawgit.com/dimagor/VizLex/master/src/VizLex-Handout.pdf</a></p>
+<p>The Visualization Lexicon is also available in a convenient one-pager:<br /><a href="http://bit.ly/vizlex_handout" class="uri">http://bit.ly/vizlex_handout</a></p>
 </section></section>
 <section><section id="cheers" class="titleslide slide level1"><h1>Cheers!</h1></section></section>
     </div>
